fix align and complete tags feature

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,9 @@
 body {
     overflow: hidden;
 }
+
+@media screen and (max-width: 500px) {
+    #SideNavMain {
+        display: none;
+    }
+}
